# eecs517-project

./: README.md  pyproject.toml
project/everything/: __main__.py  export.csv  log.txt
src/eecs517_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eecs517project/: __main__.py  montecarlo.py  plotter.py  solver.py
src/eecs517project/cross_sections/: helpers.py
src/eecs517project/cross_sections/carbon/: __init__.py  carbon.py
src/eecs517project/cross_sections/xenon/: __init__.py  xenon.py
src/eecs517project/initiate/: __init__.py  background.py  current_density.py  initiate.py  organizer.py  outputs.py  particles.py
src/eecs517project/initiate/cross_sections/: __init__.py  crosssections.py  organizer.py
src/eecs517project/particles/: __init__.py  base.py  predefined.py
src/eecs517project/plotting/: base.py  basic.py  options.py
src/eecs517project/sputtering/: sputtering.py
src/eecs517project/sputtering/carbon/: carbon.py
src/eecs517project/utls/: constants.py  helpers.py
src/eecs517project/utls/elements/: amu.py
tests/attenuated_propagating_xenon_ion_particles/: __main__.py
tests/attenuated_propagating_xenon_ion_particles_and_elastic/: __main__.py
tests/unattenuated_propagating_xenon_ion_particle/: __main__.py
tests/unattenuated_propagating_xenon_ion_particles/: __main__.py
tests/unattenuated_propagating_xenon_ion_particles_elastic/: __main__.py
tests/unattenuated_propagating_xeon_ion_particle/: __main__.py
